UP-4786: Clean up CasAssertionSecurityContext class and replace Java 8 only Base64 class with backwards compatible one.