@@ -23,17 +23,23 @@ import java.nio.file.Files;
 import java.security.KeyFactory;
 import java.security.PrivateKey;
 import java.security.spec.PKCS8EncodedKeySpec;
-import java.util.*;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
-import org.jasig.cas.client.util.AssertionHolder;
-import org.jasig.cas.client.validation.Assertion;
+import javax.crypto.Cipher;
+import javax.xml.bind.DatatypeConverter;
+
 import org.apereo.portal.security.PortalSecurityException;
 import org.apereo.portal.security.provider.ChainingSecurityContext;
 import org.apereo.portal.spring.locator.ApplicationContextLocator;
+import org.jasig.cas.client.util.AssertionHolder;
+import org.jasig.cas.client.validation.Assertion;
 import org.jasig.services.persondir.support.IAdditionalDescriptors;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.context.ApplicationContext;
-
-import javax.crypto.Cipher;
 
 /**
  * Implementation of the {@link org.apereo.portal.security.provider.cas.ICasSecurityContext} that reads the Assertion
@@ -53,12 +59,12 @@ public class CasAssertionSecurityContext extends ChainingSecurityContext impleme
     private static final String CREDENTIAL_KEY = "credential";  // encrypted password attribute from CAS
     private static final String PASSWORD_KEY = "password";  // user attribute expected by portlets
 
+    protected final Logger log = LoggerFactory.getLogger(getClass());
     // UP-4212 Transient because security contexts are serialized into HTTP Session (and webflow).
     private transient ApplicationContext applicationContext;
     private Assertion assertion;
     private boolean copyAssertionAttributesToUserAttributes = false;
     private boolean decryptCredentialToPassword = false;
-    private String decryptCredentialToPasswordPrivateKey;
     private static PrivateKey key = null;
     private static Cipher cipher = null;
     private static String algorithm;
@@ -71,7 +77,7 @@ public class CasAssertionSecurityContext extends ChainingSecurityContext impleme
         decryptCredentialToPassword = "true".equalsIgnoreCase(propertyVal);
 
         if (decryptCredentialToPassword) {
-            decryptCredentialToPasswordPrivateKey = applicationContext.getBean(DECRYPT_CRED_TO_PWD_KEY, String.class);
+            String decryptCredentialToPasswordPrivateKey = applicationContext.getBean(DECRYPT_CRED_TO_PWD_KEY, String.class);
             if (key == null) {
                 try {
                     key = getPrivateKeyFromFile(decryptCredentialToPasswordPrivateKey);
@@ -175,11 +181,7 @@ public class CasAssertionSecurityContext extends ChainingSecurityContext impleme
     }
 
     public String toString() {
-        final StringBuilder builder =  new StringBuilder();
-        builder.append(this.getClass().getName());
-        builder.append(" assertion:");
-        builder.append(this.assertion);
-        return builder.toString();
+        return this.getClass().getName() + " assertion:" + this.assertion;
     }
 
     /**
@@ -187,7 +189,7 @@ public class CasAssertionSecurityContext extends ChainingSecurityContext impleme
      *
      * @param assertion the Assertion that was retrieved from the ThreadLocal.  CANNOT be NULL.
      */
-    protected void copyAssertionAttributesToUserAttributes(Assertion assertion) {
+    private void copyAssertionAttributesToUserAttributes(Assertion assertion) {
         if (!copyAssertionAttributesToUserAttributes) {
             return;
         }
@@ -208,11 +210,11 @@ public class CasAssertionSecurityContext extends ChainingSecurityContext impleme
                 try {
                     final String encPwd = (String) (attrEntry.getValue() instanceof List
                             ? ((List) attrEntry.getValue()).get(0) : attrEntry.getValue());
-                    byte[] cred64 = Base64.getDecoder().decode(encPwd);
+                    byte[] cred64 = DatatypeConverter.parseBase64Binary(encPwd);
                     cipher.init(Cipher.DECRYPT_MODE, key);
                     final byte[] cipherData = cipher.doFinal(cred64);
-                    final String pwd = new String(cipherData);
-                    attributes.put(PASSWORD_KEY, Arrays.asList((Object) pwd));
+                    final Object pwd = new String(cipherData);
+                    attributes.put(PASSWORD_KEY, Collections.singletonList(pwd));
                 } catch (Exception e) {
                     log.warn("Cannot decipher credential", e);
                     e.printStackTrace();
@@ -220,11 +222,11 @@ public class CasAssertionSecurityContext extends ChainingSecurityContext impleme
             }
 
             // convert each attribute to a list, if necessary...
-            List<Object> valueList = null;
+            List<Object> valueList;
             if (attrEntry.getValue() instanceof List) {
-                valueList = (List)attrEntry.getValue();
+                valueList = (List<Object>) attrEntry.getValue();
             } else {
-                valueList = Arrays.asList(attrEntry.getValue());
+                valueList = Collections.singletonList(attrEntry.getValue());
             }
 
             // add the attribute...
@@ -238,7 +240,7 @@ public class CasAssertionSecurityContext extends ChainingSecurityContext impleme
         additionalDescriptors.addAttributes(attributes);
     }
 
-    protected static PrivateKey getPrivateKeyFromFile(String filename) throws Exception {
+    private static PrivateKey getPrivateKeyFromFile(String filename) throws Exception {
 
         byte[] keyBytes = Files.readAllBytes(new File(filename).toPath());
 
